--- a/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-location-popup/add-location-popup.component.html
@@ -389,9 +389,8 @@
 
                 <!-- Modal footer -->
                 <div class="modal-footer">
-                    <button type="button" mat-flat-button class="btn btn-green" (click)="onSubmit()">Save</button>
-                    <button type="button" mat-flat-button color="primary" class="btn"
-                        (click)="popupClose()">Close</button>
+                    <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">Save</button>
+                    <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">Close</button>
                 </div>
             </div>
         </div>
