--- a/src/app/shared/components/details-popup/details-popup.component.html
+++ b/src/app/shared/components/details-popup/details-popup.component.html
@@ -1,35 +1,32 @@
 <!-- edit popup -->
-<ng-template #addModal let-modal>
+<ng-template #editModal let-modal>
   <!-- Modal Header -->
   <form (ngSubmit)="onSubmit()" [formGroup]="form">
     <div class="modal-header">
-      <h4 class="modal-title">{{header}}</h4>
+      <h4 class="modal-title">{{ header }}</h4>
       <img class="btn-close" src="../assets/img/close-icon.svg" (click)="popupClose()" />
     </div>
     <!-- Modal body -->
     <div class="modal-body">
       <div class="form-group" *ngFor="let item of fields.fields">
         <div [ngSwitch]="item.controlType" [formGroup]="form">
+          <label for="{{item.key}}" class="col-form-label" [class.astrick]="item.required">{{item.label}}:</label>
           <input type="text" class="form-control" placeholder="{{ item.label }}" *ngSwitchCase="'textbox'"
-            [formControlName]="item.key" [id]="item.key" [ngClass]="{
+            [formControlName]="item.key" [id]="item.key" [type]="item.type" [ngClass]="{
               'has-error': isSubmitted && formControls[item.key].errors
             }" />
 
           <input type="number" class="form-control" placeholder="{{ item.label }}" *ngSwitchCase="'number'"
-            [formControlName]="item.key" [id]="item.key" [ngClass]="{
+            [formControlName]="item.key" [id]="item.key" [type]="item.type" [ngClass]="{
                           'has-error': isSubmitted && formControls[item.key].errors
                         }" />
 
-          <input type="password" class="form-control" placeholder="{{ item.label }}" *ngSwitchCase="'password'"
-            [formControlName]="item.key" [id]="item.key" [ngClass]="{
-                                      'has-error': isSubmitted && formControls[item.key].errors
-                                    }" />
-
-          <select [id]="item.key" *ngSwitchCase="'dropdown'" [formControlName]="item.key" [ngClass]="{
+          <select class="form-control" [id]="item.key" *ngSwitchCase="'dropdown'" [formControlName]="item.key"
+            [ngClass]="{
               'has-error': isSubmitted && formControls[item.key].errors
             }">
-            <option *ngFor="let opt of item.options" [value]="opt.key">{{
-              opt.value
+            <option *ngFor="let opt of item.options" [value]="opt[item.returnKey]">{{
+              opt[item.displayKey]
             }}</option>
           </select>
         </div>
@@ -40,9 +37,6 @@
     <div class="modal-footer">
       <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">
         Close
-      </button>
-      <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">
-        {{buttonStr}}
       </button>
     </div>
   </form>
