--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -58,8 +58,8 @@
         <tbody>
           <tr
             *ngFor="let item of companyAccess| orderBy: {property: column, direction: direction}|filter:searchText;index as i">
-            <td style="width: 20%;">{{item.UserID}}</td>
-            <td style="width: 20%;">{{item.user_name}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.UserID}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.user_name}}</td>
             <td style="width: 20%;">{{item.CompanyID}}</td>
             <td style="width: 20%;">{{item.CompanyName}}</td>
             <td class="btn-wrap">
@@ -89,3 +89,7 @@
 <!-- add popup -->
 <app-add-popup *ngIf="showAdd" [fields]="addFormData" (formCancel)="cancelAdd($event)"
   (formSubmitted)="submitAdd($event)"></app-add-popup>
+
+<app-details-popup *ngIf="showDetails" [fields]="detailsData" (formCancel)="cancelView($event)"
+  (formSubmitted)="cancelView($event)">
+</app-details-popup>
