--- a/src/app/featured/dashbord/component/company/company.component.html
+++ b/src/app/featured/dashbord/component/company/company.component.html
@@ -63,8 +63,8 @@
       <table class="table table-striped table-main-body" *ngIf="companies&&companies.length>0">
         <tbody>
           <tr *ngFor="let item of companies | orderBy: {property: column, direction: direction}|filter:searchText">
-            <td style="width: 10%;">{{item.id}}</td>
-            <td style="width: 10%;">{{item.CompanyName}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.id}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 10%;">{{item.CompanyName}}</td>
             <td style="width: 20%;">{{item.Address1}}</td>
             <td style="width: 20%;">{{item.MobileNo}}</td>
             <td style="width: 20%;">{{item.Email}}</td>
@@ -94,3 +94,6 @@
 <!-- add-popup -->
 <app-add-company-popup *ngIf="showAdd" [currency]="AllCurrency" [Edit]="false" [fields]="addFormData"
   (formCancel)="cancelAdd($event)" (formSubmitted)="submitAdd($event)"></app-add-company-popup>
+
+<app-company-details *ngIf="showDetails" [fields]="detailsData" (formCancel)="cancelView($event)"
+  (formSubmitted)="cancelView($event)"></app-company-details>
