--- a/src/app/featured/dashbord/component/currency/currency.component.html
+++ b/src/app/featured/dashbord/component/currency/currency.component.html
@@ -13,7 +13,7 @@
     <table class="table table-main-head">
       <thead>
         <tr>
-          <th style="width: 10%;" (click)="sort('id')">
+          <th style="width: 15%;" (click)="sort('id')">
             <span class="sort-wrap">
               Id
               <span class="sort-icons">
@@ -31,7 +31,7 @@
               </span>
             </span>
           </th>
-          <th style="width: 10%;" (click)="sort('CurrencySymbol')">
+          <th style="width: 15%;" (click)="sort('CurrencySymbol')">
             <span class="sort-wrap">
               Symbol
               <span class="sort-icons">
@@ -49,11 +49,6 @@
               </span>
             </span>
           </th>
-          <th style="width: 10%">
-            <span class="sort-wrap">
-              View
-            </span>
-          </th>
           <th>Operation</th>
         </tr>
       </thead>
@@ -62,11 +57,11 @@
       <table class="table table-striped table-main-body" *ngIf="addedCurrency&&addedCurrency.length>0">
         <tbody>
           <tr *ngFor="let item of addedCurrency  | orderBy: {property: column, direction: direction}|filter:searchText">
-            <td style="width: 10%;">{{item.id}}</td>
-            <td style="width: 20%;">{{item.CurrencyName}}</td>
-            <td style="width: 10%;">{{item.CurrencySymbol}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 15%;">{{item.id}}</td>
+            <td class="curser-point" (click)="openView(item)" style="width: 20%;">{{item.CurrencyName}}</td>
+            <td style="width: 15%;">{{item.CurrencySymbol}}</td>
             <td style="width: 20%;">{{item.CurrencyUnit}}</td>
-            <td style="width: 10%;" (click)="openView(item)"><img src="../assets/img/view-icon.png"></td>
+
             <td class="btn-wrap">
               <button mat-flat-button color="primary" class="btn" (click)="openEdit(item)">Edit</button>
               <button mat-flat-button class="btn btn-default" (click)="openDelete(item)">Remove</button>
