--- a/src/app/shared/components/delete-popup/delete-popup.component.html
+++ b/src/app/shared/components/delete-popup/delete-popup.component.html
@@ -10,7 +10,7 @@
     <!-- <span class="text-danger">This operation can not be undone.</span> -->
   </div>
   <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="popupClose()">Cancel</button>
-    <button type="button" class="btn btn-danger" (click)="onSubmit()">Delete</button>
+    <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">Cancel</button>
+    <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">Delete</button>
   </div>
 </ng-template>
