--- a/src/app/shared/components/edit-popup/edit-popup.component.html
+++ b/src/app/shared/components/edit-popup/edit-popup.component.html
@@ -35,10 +35,10 @@
 
     <!-- Modal footer -->
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" (click)="popupClose()">
+      <button type="button" mat-flat-button class="btn btn-default" (click)="popupClose()">
         Close
       </button>
-      <button type="button" class="btn btn-green" (click)="onSubmit()">
+      <button type="button" mat-flat-button color="primary" class="btn" (click)="onSubmit()">
         Save
       </button>
     </div>
