--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -56,6 +56,10 @@
           </tr>
         </tbody>
       </table>
+      <ngb-pagination *ngIf="addedChains&&addedChains.length>0" [collectionSize]="70" [(page)]="page"
+        (pageChange)="pageChanged($event)">
+      </ngb-pagination>
+
       <app-no-data *ngIf="!addedChains||addedChains.length==0"></app-no-data>
     </div>
   </section>
