--- a/src/app/featured/dashbord/component/chain/chain.component.html
+++ b/src/app/featured/dashbord/component/chain/chain.component.html
@@ -56,8 +56,8 @@
           </tr>
         </tbody>
       </table>
-      <ngb-pagination *ngIf="addedChains&&addedChains.length>0" [collectionSize]="70" [(page)]="page"
-        (pageChange)="pageChanged($event)">
+      <ngb-pagination *ngIf="addedChains&&addedChains.length>0 &&pagination.totalPages" [collectionSize]="pagination.totalPages"
+        [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
       </ngb-pagination>
 
       <app-no-data *ngIf="!addedChains||addedChains.length==0"></app-no-data>
