--- a/src/app/featured/dashbord/component/company-access/company-access.component.html
+++ b/src/app/featured/dashbord/component/company-access/company-access.component.html
@@ -69,6 +69,9 @@
           </tr>
         </tbody>
       </table>
+      <ngb-pagination *ngIf="companyAccess&&companyAccess.length>0 &&pagination.totalPages"
+        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+      </ngb-pagination>
       <app-no-data *ngIf="!companyAccess||companyAccess.length==0"></app-no-data>
     </div>
   </section>
