--- a/src/app/featured/dashbord/component/location/location.component.html
+++ b/src/app/featured/dashbord/component/location/location.component.html
@@ -78,6 +78,9 @@
           </tr>
         </tbody>
       </table>
+      <ngb-pagination *ngIf="addedlocations&&addedlocations.length>0 &&pagination.totalPages"
+        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+      </ngb-pagination>
       <app-no-data *ngIf="!addedlocations||addedlocations.length==0"></app-no-data>
     </div>
   </section>
