--- a/src/app/featured/dashbord/component/users-admin/users-admin.component.html
+++ b/src/app/featured/dashbord/component/users-admin/users-admin.component.html
@@ -92,6 +92,9 @@
           </tr>
         </tbody>
       </table>
+      <ngb-pagination *ngIf="allUsers&&allUsers.length>0 &&pagination.totalPages"
+        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+      </ngb-pagination>
       <app-no-data *ngIf="!allUsers||allUsers.length==0"></app-no-data>
     </div>
   </section>
