login design changes

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -715,7 +715,7 @@ td.dropdown-select .multi-select{
 
 /*Login*/
 .login-wrapper {
-    width: 28%;
+    width: 34%;
     margin: auto;
     text-align: center;
     height: 100vh;
@@ -725,9 +725,12 @@ td.dropdown-select .multi-select{
 }
 .login-wrapper .wrapper {
     width: 100%;
+    border: 1px solid #bebfc0;
+    padding: 100px 40px;
+    border-radius: 5px
 }
 .login-wrapper .logo-wrap{
-    padding-bottom: 70px;
+    padding-bottom: 15px;
 }
 .login-wrapper .logo-wrap h2{
     font-size: 20px;
@@ -735,12 +738,108 @@ td.dropdown-select .multi-select{
     font-weight: 300;
     margin-top: 10px;
 }
-.login-wrapper .form-control {
+
+/*.login-wrapper .form-control {
     border: 0;
     border-bottom: 1px solid #ddd;
     border-radius: 0;
     padding-left: 0;
     outline: none;
+}*/
+
+/*Login input field styles*********************/
+
+.login-wrapper input[type=submit] {
+    border: none;
+    cursor: pointer;
+}
+
+.login-wrapper .form-wrap{
+    margin-bottom: 30px;
+}
+.login-wrapper .form-container {
+    width: 80%;
+    padding: 10px;
+    margin: auto;
+}
+
+.login-wrapper .form-heading {
+    margin-top: 0;
+    margin-bottom: 1.2em;
+    text-align: center;
+}
+
+.login-wrapper .form-heading-highlight {
+    color: #009688;
+}
+
+.login-wrapper .form-row {
+    position: relative;
+    margin-top: 30px;
+}
+
+.login-wrapper .form-label {
+    position: absolute;
+    font-size: 14px;
+    top: 19px;
+    left: 20px;
+    color: #999;
+    cursor: text;
+    z-index: -1;
+    transition: all .15s ease-in-out 0s;
+}
+
+.login-wrapper .form-textbox,
+.login-wrapper .form-submit {
+    width: 100%;
+    padding: 16px;
+    border-radius: 4px;
+    box-shadow: none !important;
+    outline: 0;
+    border: 1px solid #bebfc0 !important;
+    background: transparent;
+}
+.login-wrapper .form-textbox:focus{
+    border: 2px solid #1a73e8 !important;
+}
+/*.login-wrapper .form-textbox { 
+    box-shadow: inset 0 0 10px rgba(0,0,0,.1);
+}*/
+
+.login-wrapper .form-textbox:focus ~ .form-label,
+.login-wrapper .form-textbox:valid ~ .form-label {
+    top: -0.5em;
+    left: 16px;
+    font-size: .8em;
+    font-weight: 500;
+    color: inherit;
+    cursor: pointer;
+    color: #1a73e8;
+    background: #fff;
+    padding: 1px 6px;
+    z-index: 1
+}
+
+.login-wrapper .form-submit {
+    background-color: #009688;
+    font-weight: 700;
+    color: #fff;
+    transition: opacity .15s ease-in-out 0s;
+}
+
+.login-wrapper .form-submit:hover {
+    opacity: .75;
+}
+
+.login-wrapper button {
+    min-width: 140px;
+}
+
+/*input style end*/
+
+.login-wrapper .form-control {
+    position: relative;
+    height: 48px;
 }
 ::placeholder{
     color: #00000061;
