added max length

--- a/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-chain-popup/add-chain-popup.component.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="col col-sm-5">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" formControlName="chainid"
+                                    <input type="text" maxlength="10" class="form-control" formControlName="chainid"
                                         [ngClass]="{ 'has-error': isSubmitted && formControls.chainid.errors }">
                                 </div>
                             </div>
