--- a/src/app/featured/dashbord/component/popups/add-currency-popup/add-currency-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-currency-popup/add-currency-popup.component.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="col col-sm-5">
                             <div class="form-group">
-                                <input type="text" class="form-control" formControlName="currencyid"
+                                <input type="text" class="form-control" formControlName="currencyid" maxlength="10"
                                     [ngClass]="{ 'has-error': isSubmitted && formControls.currencyid.errors }">
                             </div>
                         </div>
