--- a/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
+++ b/src/app/featured/dashbord/component/popups/add-user-popup/add-user.component.html
@@ -19,7 +19,7 @@
                             </div>
                             <div class="col col-sm-5">
                                 <div class="form-group">
-                                    <input type="number" class="form-control" placeholder=" User ID"
+                                    <input type="text" class="form-control" placeholder=" User ID" maxlength="5"
                                         formControlName="userid"
                                         [ngClass]="{ 'has-error': isSubmitted && formControls.userid.errors }">
                                 </div>
