--- a/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
+++ b/src/app/featured/dashbord/component/cost-center-access/cost-center-access.component.html
@@ -61,6 +61,9 @@
           </tr>
         </tbody>
       </table>
+      <ngb-pagination *ngIf="allCostAccess&&allCostAccess.length>0 &&pagination.totalPages"
+        [collectionSize]="pagination.totalPages" [(page)]="pagination.currentPage" (pageChange)="pageChanged($event)">
+      </ngb-pagination>
       <app-no-data *ngIf="!allCostAccess||allCostAccess.length==0"></app-no-data>
     </div>
   </section>
