--- a/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
+++ b/src/app/featured/dashbord/component/popups/add-company-popup/add-company-popup.component.html
@@ -25,7 +25,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label ">
+                        <div class="col col-sm-5 label astrick">
                             Company Name
                         </div>
                         <div class="col col-sm-5">
@@ -36,7 +36,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Contact
                         </div>
                         <div class="col col-sm-5">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Email
                         </div>
                         <div class="col col-sm-5">
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Ret Earning A/C
                         </div>
                         <div class="col col-sm-5">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Acc Ret Earning
                         </div>
                         <div class="col col-sm-5">
@@ -176,7 +176,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label ">
+                        <div class="col col-sm-5 label astrick">
                             System Error Account
                         </div>
                         <div class="col col-sm-5 label">
@@ -197,7 +197,7 @@
                     </div>
 
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Help path
                         </div>
                         <div class="col col-sm-5">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                     <div class="form-group-wrap row">
-                        <div class="col col-sm-5 label">
+                        <div class="col col-sm-5 label astrick">
                             Communication
                         </div>
                         <div class="col-sm-5">
